--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
             <div class="my-2 md:block md:w-auto hidden" id="navbar-default-btn">
-                <a href="https://t.me/+4cNXIahI3T04NWFh" class="">
+                <a href="https://t.me/maccasonsol" class="">
                     <button type="button"
                         class="text-white bg-black hover:bg-white hover:text-black border border-white focus:outline-none focus:ring-4 focus:ring-white font-medium rounded-full text-sm px-5 py-2.5 me-2 mb-2 ">
                         Join the community
@@ -321,7 +321,7 @@
                 <h1 class="text-center md:text-left text-3xl lg:text-5xl font-extrabold mb-8 text-white ">Follow
                     Maccas on social media</h1>
                 <div class="flex items-center justify-center md:justify-start gap-4 ">
-                    <a href="https://t.me/+4cNXIahI3T04NWFh">
+                    <a href="https://t.me/maccasonsol">
                         <img class="w-24 transform hover:scale-110 transition duration-200" src="images/social_tg.png"
                             alt="">
                     </a>
