--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                         <div id="hs-clipboard-basic" class=" text-white border  rounded-lg w-full ">
                             <input id="hs-clipboard-input" type="text"
                                 class="py-3 px-4 block rounded-lg text-sm w-full md:w-full placeholder:text-white  bg-black"
-                                value="">
+                                value="9cwip6MaGUVh4uqUa7y64LVQa6M83nAwRCWj2h7Vpump">
                         </div>
                         <button type="button"
                             class="js-clipboard p-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border text-white shadow-sm disabled:opacity-50 disabled:pointer-events-none "
